addes select all button

--- a/app/view2/setup-view-tpl.html
+++ b/app/view2/setup-view-tpl.html
@@ -23,6 +23,7 @@
     </div>
 
 </div>
+<md-button ng-click="selectAll()" class="md-raised"> select all</md-button>
 
 <div layout="column" layout-margin>
 
