hanzi training added

--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
 <script src="services/listmaker.js"></script>
 <script src="services/runner.js"></script>
 <script src="services/character.js"></script>
+<script src="services/hanzi.js"></script>
 <script src="services/selection.js"></script>
 <script src="services/feedback-services.js"></script>
 <script src="common/constants.js"></script>
