hanzi-wubi lookup working

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="bower_components/angular-material/themes/blue-theme.css">
 
     <link href="bower_components/material-design-icons/sprites/css-sprite/sprite-hardware-black.css" rel="stylesheet">
+    <link href="bower_components/material-design-icons/sprites/css-sprite/sprite-action-white.css" rel="stylesheet">
 
     <link rel="stylesheet" href="app.css">
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
@@ -42,6 +43,7 @@
 
         <a href="#/setup" class="nav-btn">Lessons</a>
         <a href="#/info" class="nav-btn">Info</a>
+        <a href="#/lookup" class="nav-btn" ><div class="icon_white icon-action-white-ic_search_white_24dp" style="display: inline-block; margin-bottom: -6px;"></div></a>
                                               </span>
 
                   <span style="color: #add8e6; display: inline; float:right; font-weight: lighter">
@@ -98,6 +100,8 @@
 <script src="view1/tutor.services.js"></script>
 <script src="view2/setup-view.js"></script>
 <script src="view3/view3.js"></script>
+<script src="lookup-view/lookup-view.js"></script>
+<script src="lookup-view/lookup-view-controllers.js"></script>
 
 <script src="services/key-event-services.js"></script>
 <script src="services/dataservice.js"></script>
@@ -107,6 +111,7 @@
 <script src="services/hanzi.js"></script>
 <script src="services/selection.js"></script>
 <script src="services/feedback-services.js"></script>
+<script src="services/hanzi-lookup.js"></script>
 <script src="common/constants.js"></script>
 <script src="common/values.js"></script>
 </body>
