--- a/app/view1/practiceView.tpl.html
+++ b/app/view1/practiceView.tpl.html
@@ -27,7 +27,7 @@
                     the wubi code of this character is:
                         <div style="font-size: 33px;">
 
-                    {{data.promptCharacter.wubiCode}}
+                    {{data.promptCharacter.wubiCode[0]}}
                         </div>
 
                     </div>
@@ -79,11 +79,13 @@
 
         <show-answer visible="display.showAnswerByService"></show-answer>
 
+            <!--
         <div>
             <md-button ng-click="prompt()" class="md-primary">
                 Next>>
             </md-button>
         </div>
+         -->
 
 
         <div ng-if="data.promptCharacter">
